--- a/templates/cases/tomorrows_cases.html
+++ b/templates/cases/tomorrows_cases.html
@@ -1,15 +1,14 @@
 {% extends 'dashboard/dashboard.html' %}
 
 {% block content %}
-<<<<<<< HEAD
   <h2 class="text-center">Tomorrow's Cases</h2>
   <div class="card mb-4">
     <div class="card-header">
         <i class="fas fa-table me-1"></i>
-        Case List
+        Tomorrow's Cases
     </div>
     <div class="card-body">
-        {% if cases %}
+        {% if tomorrows_cases %}
         <table id="datatablesSimple">
             <thead>
                 <tr>
@@ -44,7 +43,7 @@
                 </tr>
             </tfoot>
             <tbody>
-                {% for case in cases %}
+                {% for case in tomorrows_cases %}
                 <tr>
                     <td>{{ case.case_type }}</td>
                     <td>{{ case.court }}</td>
@@ -67,95 +66,4 @@
 {% else %}
 <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any cases</h3>
 {% endif %}
-=======
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h3 class="text-center">Tomorrows Case List</h3>
-                {% if tomorrows_cases %}
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                            <th scope="col">Case Type</th>
-                            <th scope="col">Court</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">First Party</th>
-                            <th scope="col">Appointed By</th>
-                            <th scope="col">Law and Section</th>
-                            <th scope="col">Case No</th>
-                            <th scope="col">Police Station</th>
-                            <th scope="col">Fixed For</th>
-                            <th scope="col">Second Party</th>
-                            <th scope="col">Mobile No.</th>
-                            <th scope="col">Comments</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for case in tomorrows_cases %}
-                            <tr>
-                            <th scope="row">{{ case.case_type }}</th>
-                            <td>{{ case.court }}</td>
-                            <td>{{ case.date }}</td>
-                            <td>{{ case.first_party }}</td>
-                            <td>{{ case.appointed_by }}</td>
-                            <td>{{ case.law_and_section }}</td>
-                            <td>{{ case.case_no }}</td>
-                            <td>{{ case.police_station }}</td>
-                            <td>{{ case.fixed_for }}</td>
-                            <td>{{ case.second_party }}</td>
-                            <td>{{ case.mobile_no }}</td>
-                            <td>{{ case.comments }}</td>
-                            </tr>
-                           {% endfor %}
-                        </tbody>
-                        </table>
-                    {% else %}
-                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any cases</h3>
-                    {% endif %}
-        </div>
-    </div>
-  </div>
->>>>>>> fa53dcd5112a8825735f55e05c45615a2b80c8c6
 {% endblock %}
-
-
-                        <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Case Type</th>
-                            <th scope="col">Court</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">First Party</th>
-                            <th scope="col">Appointed By</th>
-                            <th scope="col">Law and Section</th>
-                            <th scope="col">Case No</th>
-                            <th scope="col">Police Station</th>
-                            <th scope="col">Fixed For</th>
-                            <th scope="col">Second Party</th>
-                            <th scope="col">Mobile No.</th>
-                            <th scope="col">Comments</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for case in cases %}
-                            <tr>
-                            <th scope="row">{{ case.case_type }}</th>
-                            <td>{{ case.court }}</td>
-                            <td>{{ case.date }}</td>
-                            <td>{{ case.first_party }}</td>
-                            <td>{{ case.appointed_by }}</td>
-                            <td>{{ case.law_and_section }}</td>
-                            <td>{{ case.case_no }}</td>
-                            <td>{{ case.police_station }}</td>
-                            <td>{{ case.fixed_for }}</td>
-                            <td>{{ case.second_party }}</td>
-                            <td>{{ case.mobile_no }}</td>
-                            <td>{{ case.comments }}</td>
-                            </tr>
-                        {% empty %}
-                            <tr>
-                            <td colspan="12">No cases found.</td>
-                            </tr>
-                        {% endfor %}
-                        </tr>
-                    </tbody>
-                    </table>
