--- a/templates/cases/add_client.html
+++ b/templates/cases/add_client.html
@@ -1,41 +1,44 @@
-
 {% extends 'dashboard/dashboard.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <h3 class="text-center alert alert-primary" role="alert">Add Client</h3>
-          <form method="post">
-            
-            {% csrf_token %}
+        <div class="card shadow">
+          <div class="card-body">
+            <h3 class="text-center alert alert-primary" role="alert">Add Client</h3>
+              <form method="post">
+                
+                {% csrf_token %}
 
-           <div class="row">
-            <div class="col-md-6">{{ form.name|as_crispy_field }}</div>
-            <div class="col-md-6">{{ form.branch|as_crispy_field }}</div>
-           </div>
-           <div class="row">
-            <div class="col-md-6">{{ form.chamber_file_number|as_crispy_field }}</div>
-            <div class="col-md-6">{{ form.Representative|as_crispy_field }}</div>
-           </div>
-           <div class="row">
-            <div class="col-md-6">{{ form.mobile|as_crispy_field }}</div>
-            <div class="col-md-6">{{ form.additional_mobile|as_crispy_field }}</div>
-           </div>
-           <div class="row">
-            <div class="col-md-6">{{ form.email|as_crispy_field }}</div>
-            <div class="col-md-6"></div>
-           </div>
-           <div class="row">
-            <div class="col-md-6">{{ form.address|as_crispy_field }}</div>
-            <div class="col-md-6">{{ form.short_note|as_crispy_field }}</div>
-           </div>
-           <br>
-            <div class="row">
-              <div class="col-md-2 offset-md-5"> <button type="submit" class="btn btn-primary">Add Client</button></div>
-            </div>
-           
-          </form>
+                <div class="row">
+                  <div class="col-md-6">{{ form.name|as_crispy_field }}</div>
+                  <div class="col-md-6">{{ form.branch|as_crispy_field }}</div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">{{ form.chamber_file_number|as_crispy_field }}</div>
+                  <div class="col-md-6">{{ form.Representative|as_crispy_field }}</div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">{{ form.mobile|as_crispy_field }}</div>
+                  <div class="col-md-6">{{ form.additional_mobile|as_crispy_field }}</div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">{{ form.email|as_crispy_field }}</div>
+                  <div class="col-md-6"></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">{{ form.address|as_crispy_field }}</div>
+                  <div class="col-md-6">{{ form.short_note|as_crispy_field }}</div>
+                </div>
+                <br>
+                <div class="row">
+                  <div class="col-md-2 offset-md-5"> <button type="submit" class="btn btn-primary">Add Client</button></div>
+                </div>
+               
+              </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>
