--- a/templates/accounts/statements.html
+++ b/templates/accounts/statements.html
@@ -1,40 +1,56 @@
 {% extends 'dashboard/dashboard.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h3 class="text-center">Statements</h3>
-            {% if statements %}
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Client Name</th>
-                            <th>Details</th>
-                            <th>Transaction Type</th>
-                            <th>Action</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for statement in statements %}
+
+<h2 class="text-center">Statements</h2>
+<div class="card mb-4">
+    <div class="card-header">
+        <i class="fas fa-table me-1"></i>
+        Statements
+    </div>
+    <div class="card-body">
+        {% if statements %}
+        <table id="datatablesSimple">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Client Name</th>
+                    <th>Details</th>
+                    <th>Transaction Type</th>
+                    <th>Amount</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tfoot>
+                <tr>
+                    <th>Date</th>
+                    <th>Client Name</th>
+                    <th>Details</th>
+                    <th>Transaction Type</th>
+                    <th>Amount</th>
+                    <th>Action</th>
+                </tr>
+            </tfoot>
+            <tbody>
+                {% for statement in statements %}
                             <tr>
                             <td>{{ statement.date }}</td>
                             <td>{{ statement.party_name }}</td>
                             <td>{{ statement.details }}</td>
+                            <td>{{ statement.amount }}</td>
                             <td>{{ statement.transaction_type }}</td>
                             </tr>
                         {% empty %}
                             <tr>
-                            <td colspan="12">No cases found.</td>
+                            <td colspan="12">No Staements found.</td>
                             </tr>
                         {% endfor %}
-                        </tbody>
-                    </table>
-                    {% else %}
-                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any statements</h3>
-                    {% endif %}
-        </div>
+            </tbody>
+        </table>
     </div>
-  </div>
+</div>
+{% else %}
+<h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any statements</h3>
+{% endif %}
 {% endblock %}
+
