--- a/templates/accounts/statements.html
+++ b/templates/accounts/statements.html
@@ -1,6 +1,65 @@
 {% extends 'dashboard/dashboard.html' %}
 
+
 {% block content %}
+
+<div class="statements">
+{% if statements %}
+
+      <div class="col-md-10 offset-md-1">
+        <div class="card mb-4">
+          <div class="card-header">
+              <i class="fas fa-table me-1"></i>
+              Statements
+          </div>
+          <div class="card-body">
+            
+              <table id="datatablesSimple">
+                  <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Client Name</th>
+                        <th>Details</th>
+                        <th>Transaction Type</th>
+                        <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tfoot>
+                    <tr>
+                        <th>Date</th>
+                        <th>Client Name</th>
+                        <th>Details</th>
+                        <th>Transaction Type</th>
+                        <th>Action</th>
+                    </tr>
+                  </tfoot>
+                  <tbody>
+                    {% for statement in statements %}
+                    <tr>
+                    <td>{{ statement.date }}</td>
+                    <td>{{ statement.party_name }}</td>
+                    <td>{{ statement.details }}</td>
+                    <td>{{ statement.transaction_type }}</td>
+                    <td></td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+              </table>
+
+              {% else %}
+                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any statements</h3>
+           
+          </div>
+        </div>
+        {% endif %}
+        
+           
+      </div>
+    </div>
+
+
+{% endblock %}
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -37,4 +96,6 @@
         </div>
     </div>
   </div>
-{% endblock %}
+
+
+
