--- a/templates/cases/all_client.html
+++ b/templates/cases/all_client.html
@@ -1,64 +1,71 @@
 {% extends 'dashboard/dashboard.html' %}
 
 {% block content %}
-
+<br>
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card mb-4">
-                <div class="card-header">
-                    <i class="fas fa-table me-1"></i>
-                    All Clients
-                </div>
-                {% if clients %}
-                <div class="card-body">
-                    <table class="table">
-                        <thead class="thead-dark">
-                          <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Branch</th>
-                            <th scope="col">File Number</th>
-                            <th scope="col">Representative</th>
-                            <th scope="col">Mobile</th>
-                            <th scope="col">Additional Mobile</th>
-                            <th scope="col">email</th>
-                            <th scope="col">Address</th>
-                            <th scope="col">Short Note</th>
-                    
-                    
-                          </tr>
-                        </thead>
-                        <tbody>
-                    
-                            {% for client in clients %}
-                          <tr>
-                    
-                             <td>{{ client.name }}</td>
-                                    <td>{{ client.branch }}</td>
-                                    <td>{{ client.chamber_file_number }}</td>
-                                    <td>{{ client.representative }}</td>
-                                    <td>{{ client.mobile }}</td>
-                                    <td>{{ client.additional_mobile }}</td>
-                                    <td>{{ client.email }}</td>
-                                    <td>{{ client.short_note }}</td>
-                          </tr>
-                          {% endfor %}
-                        </tbody>
-                      </table>
-                      
-            {% else %}
-            <h3 class="text-center alert alert-primary" role="alert">Currently, No Clients in the list</h3>
-            {% endif %}
+  <div class="row">
+    <div class="col-md-10 offset-md-1">
+      <div class="card mb-4">
+        <div class="card-header">
+            <i class="fas fa-table me-1"></i>
+            All Clients
         </div>
+        <div class="card-body">
+          {% if clients %}
+            <table id="datatablesSimple">
+                <thead>
+                    <tr>
+                      <th>Name</th>
+                      <th>Branch</th>
+                      <th>File Number</th>
+                      <th>Representative</th>
+                      <th>Mobile</th>
+                      <th>Additional Mobile</th>
+                      <th>email</th>
+                      <th>Address</th>
+                      <th>Short Note</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                      <th>Name</th>
+                      <th>Branch</th>
+                      <th>File Number</th>
+                      <th>Representative</th>
+                      <th>Mobile</th>
+                      <th>Additional Mobile</th>
+                      <th>email</th>
+                      <th>Address</th>
+                      <th>Short Note</th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                  {% for client in clients %}
+                  <tr>
+            
+                            <td>{{ client.name }}</td>
+                            <td>{{ client.branch }}</td>
+                            <td>{{ client.chamber_file_number }}</td>
+                            <td>{{ client.representative }}</td>
+                            <td>{{ client.mobile }}</td>
+                            <td>{{ client.additional_mobile }}</td>
+                            <td>{{ client.email }}</td>
+                            <td>{{ client.address }}</td>
+                            <td>{{ client.short_note }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+            </table>
+        </div>
+      </div>
+      {% endif %}
+      
+         
     </div>
+  </div>
 </div>
 
 
-   
 {% endblock %}
-
-
-
-
 
 
