--- a/templates/cases/add_client.html
+++ b/templates/cases/add_client.html
@@ -43,4 +43,35 @@
       </div>
     </div>
   </div>
+
+  <br>
+  <div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h3 class="text-center alert alert-primary" role="alert">Add Client</h3>
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="{{ bulk_form.excel_file }}">Excel File:</label>
+                                    {{ bulk_form.as_p }}
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-3 offset-md-5">
+                                <button type="submit" class="btn btn-success">Bulk Add Client</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
